--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,13 @@
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <!-- TODO project name  -->
-    <name>quickstart</name>
+    <name>Comercio</name>
     <description></description>
     <!--
-                                  		<organization>
-                                                                 			<name>company name</name>
-                                                                 			<url>company url</url>
-                                  		</organization>
+                                                  		<organization>
+                                                                                                 			<name>company name</name>
+                                                                                                 			<url>company url</url>
+                                                  		</organization>
    	-->
     <licenses>
         <license>
@@ -55,9 +55,9 @@
         </dependency>
         <!-- OPTIONAL DEPENDENCY
       		<dependency>
-                                     			<groupId>org.apache.wicket</groupId>
-                                     			<artifactId>wicket-extensions</artifactId>
-                                     			<version>${wicket.version}</version>
+                                                     			<groupId>org.apache.wicket</groupId>
+                                                     			<artifactId>wicket-extensions</artifactId>
+                                                     			<version>${wicket.version}</version>
       		</dependency>
       		-->
 
@@ -92,6 +92,17 @@
             <groupId>com.googlecode.wicket-jquery-ui</groupId>
             <artifactId>jquery-ui-core</artifactId>
             <version>6.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cayenne</groupId>
+            <artifactId>cayenne-server</artifactId>
+            <!-- Here specify the version of Cayenne you are actually using -->
+            <version>3.1B1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cayenne</groupId>
+            <artifactId>cayenne-client</artifactId>
+            <version>3.1B1</version>
         </dependency>
     </dependencies>
     <build>
